Tue May 16 13:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
        * ace/OS_NS_arpa_inet.{h,cpp,inl}:
        * ace/OS_NS_dirent.inl:
          Removed psos support

        * ace/INET_Addr.cpp:
        * ace/config-macros.h:
          Removed chorus support

        * ace/Unbounded_Queue.h:
          Removed remark about chorus

        * ace/config-cray.h:
          Removed explicit template instantiation define, we don't have that
          anymore

        * ace/config-hpux-11.00.h:
        * ace/config-sunos5.7.h:
        * ace/config-rtems.h:
        * ace/config-osf1-4.0.h:
          Removed kcc support

Mon May 15 11:30:14 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:
          Added more tests that can't run in ACE_FOR_TAO configations due
          to dependency on something that avoids ACE_FOR_TAO.

Mon May 15 01:15:45 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Added !ACE_FOR_TAO to those tests for which MPC skips generating
          executables because it directly or indirectly avoids ACE_FOR_TAO.
          Indirect avoidance occurs when a project derives from a base
          project that avoids ACE_FOR_TAO.

Thu May 11 12:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Block.h:
          Doxygen improvements

Thu May 11 11:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dev_Poll_Reactor.cpp:
          Removed chorus support

Thu May 11 07:19:12 UTC 2006  Kees van Marle  <kvmarle@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_1254_Regression

Wed May 10 14:10:02 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-msvc-7.h: MSVC 7.1 operator new throws an exception
          on an out-of-memory condition, but only when the standard C++
          library is used; the older CRT new() doesn't.
