@@ -5,9 +5,9 @@
 #include "ace/os_include/sys/os_time.h"
 #include "ace/os_include/os_errno.h"
 
-#if defined (VXWORKS) || defined (CHORUS) || defined (ACE_PSOS)
+#if defined (VXWORKS)
 #  include "ace/OS_NS_time.h"
-#endif /* VXWORKS || CHORUS || ACE_PSOS */
+#endif /* VXWORKS */
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
@@ -68,7 +68,7 @@ ACE_OS::gettimeofday (void)
   defined(ACE_HAS_VOIDPTR_GETTIMEOFDAY) || \
   (defined (ACE_HAS_SVR4_GETTIMEOFDAY) && !defined (m88k) && !defined (SCO))
   ACE_OSCALL (::gettimeofday (&tv, 0), int, -1, result);
-# elif defined (VXWORKS) || defined (CHORUS) || defined (ACE_PSOS)
+# elif defined (VXWORKS)
   // Assumes that struct timespec is same size as struct timeval,
   // which assumes that time_t is a long: it currently (VxWorks
   // 5.2/5.3) is.
